added deploy branding options

--- a/Branding365Web/Views/Home/Index.cshtml
+++ b/Branding365Web/Views/Home/Index.cshtml
@@ -25,10 +25,10 @@
                     <br />
                     <br />
                     <div class="checkbox">
-                        <label for="chkExistingFiles"><input id="chkExistingFiles" type="checkbox" value="Override" />Override existing files</label>
+                        <label for="chkExistingFiles"><input id="chkExistingFiles" name="OverrideExistingFiles" type="checkbox" value="true" />Override existing files</label>
                     </div>
                     <div class="checkbox">
-                        <label for="chkSubSites"><input id="chkSubSites" type="checkbox" value="SubSites" />Apply to sub sites</label>
+                        <label for="chkSubSites"><input id="chkSubSites" name="ApplyToSubSites" type="checkbox" value="true" />Apply to sub sites</label>
                     </div>
                 }
             </div>
