--- a/Branding365Web/Views/Home/Index.cshtml
+++ b/Branding365Web/Views/Home/Index.cshtml
@@ -39,8 +39,7 @@
                 }
             </div>
         </div>
-        <pre style="height: 200px; overflow-y: scroll;">
-        </pre>
+        <pre style="height: 200px; overflow-y: scroll;">@Html.Encode(Model.Log)</pre>
     </div>
     <div class="col-md-8">
         <h2>Contents</h2>
